--- a/blog/templates/blog/frontpage.html
+++ b/blog/templates/blog/frontpage.html
@@ -25,7 +25,7 @@
             <p></p>
 
            <a href="{% url  'post_detail' post.slug %}">
-            <button type="button" class="btn btn-danger"><i class="bi bi-body-text">📚 Read more</i></button></a>
+            <button type="button" class="btn btn-dark"><i class="bi bi-body-text">📚 Read more</i></button></a>
         </div>
  
     {% empty %}
@@ -36,8 +36,7 @@
 
     {% endfor %}  
     <hr>
-    <div class="card" style="width: 25rem;">
-  <!-- <img src="..." class="card-img-top" alt="..."> -->
+    <div class="card" style="width: 15rem;">
   <div class="btn btn-light">
     <h5 class="card-title" >------   Credits   ------</h5>
     <hr>
@@ -46,7 +45,7 @@
   </div>
 </div>
 <p></p>
-<a href="https://docs.djangoproject.com/en/4.1/" class="btn btn-danger"><i class="bi bi-body-text">📚 Read more</a></i>
+<a href="https://docs.djangoproject.com/en/4.1/" class="btn btn-dark"><i class="bi bi-body-text">📚 Read more</a></i>
 
 
     
