--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -3,6 +3,7 @@
 
     <head>
 
+
         <div class="bg-danger p-2 text-white bg-opacity-75; justify-content: center; align-items:center"></div>
         <meta charset="utf-8" />
         <title>Univelcity blog</title>
@@ -13,14 +14,16 @@
 
 
     <body>
-        <nav class="navbar is-info" style="background-color: black;display:flex;justify-content:center; align-items:center; height:100p"> 
+        <nav class="navbar is-info" style="background-color: white;display:flex;justify-content:center; align-items:center; height:100px"> 
 
             <div class="navbar-brand">
                 <a href"/" class="navbar-item text-decoration-none fs-1 fw-bold">
                 <h2><div class="text-center">
-                </div>⚜️ UNIVELCITY BLOG ⚜️</h2></a></div>
+                </div><img src="https://cdn-adcln.nitrocdn.com/JnSmDfoOPbPIYQLaagQwOgwJSGuyTIVO/assets/static/optimized/rev-02a43a7/wp-content/uploads/2020/05/Univelcity-logo.png" style="height: 50px; width:auto;"></h2></a></div>
             </div>
         </nav>
+        <div class="bg-dark p-2 text-white bg-opacity-75; justify-content: center; align-items:center"></div>
+        
         <div class="te;height:100px"></div>
         <section class="section">
             <div class="container">
