--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -4,7 +4,7 @@
     <head>
 
 
-        <div class="bg-danger p-2 text-white bg-opacity-75; justify-content: center; align-items:center"></div>
+        <div class="bg-dark p-2 text-white bg-opacity-75; justify-content: center; align-items:center"></div>
         <meta charset="utf-8" />
         <title>Univelcity blog</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -23,7 +23,7 @@
             </div>
         </nav>
         <div class="bg-dark p-2 text-white bg-opacity-75; justify-content: center; align-items:center"></div>
-        
+        <link rel="stylesheet" href="/static/file.css/">
         <div class="te;height:100px"></div>
         <section class="section">
             <div class="container">
@@ -34,7 +34,7 @@
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
         </nav>
-        <link rel="stylesheet" href="/static/file.css/">
+
 
     </body>
 </html> 
